Added Utopian Tree

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 /SherlockAndTheBeast/nbproject/private/
 /TimeSolution/nbproject/private/
 /AngryProfessorSolution/nbproject/private/
+/UtopianTree/nbproject/private/
