Added Find Squares

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 /TimeSolution/nbproject/private/
 /AngryProfessorSolution/nbproject/private/
 /UtopianTree/nbproject/private/
+/FindSquares/nbproject/private/
