Added Sherlock And The Sqaures

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 /AngryProfessorSolution/nbproject/private/
 /UtopianTree/nbproject/private/
 /FindSquares/nbproject/private/
+/SherlockAndTheSquares/nbproject/private/
